src/objects/FF_Staging_User__c.object
<CustomObject>
    <fields>
        <fullName>Address__c</fullName>
        <label>Home Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Admin_Notes__c</fullName>
        <label>Admin Notes</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alias__c</fullName>
        <label>Alias</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Unit_JDE__c</fullName>
        <label>Business Unit (JDE)</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Unit__c</fullName>
        <label>Business Unit</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>Home City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Changed_Date__c</fullName>
        <label>Contact Changed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contact_Processed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Contact Processed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact_Record_Updated_Date__c</fullName>
        <description>Date when Contact record is updated after batch class ran</description>
        <label>Contact Record Updated Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>FF Staging - Users</relationshipLabel>
        <relationshipName>FF_Staging_Users</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Corporate_Role__c</fullName>
        <label>Corporate Role</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Home Country</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CurrencyIsoCode__c</fullName>
        <label>Currency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>AED</fullName>
                </value>
                <value>
                    <fullName>ARS</fullName>
                </value>
                <value>
                    <fullName>AUD</fullName>
                </value>
                <value>
                    <fullName>BRL</fullName>
                </value>
                <value>
                    <fullName>CAD</fullName>
                </value>
                <value>
                    <fullName>CHF</fullName>
                </value>
                <value>
                    <fullName>CNY</fullName>
                </value>
                <value>
                    <fullName>DKK</fullName>
                </value>
                <value>
                    <fullName>EUR</fullName>
                </value>
                <value>
                    <fullName>GBP</fullName>
                </value>
                <value>
                    <fullName>HKD</fullName>
                </value>
                <value>
                    <fullName>ILS</fullName>
                </value>
                <value>
                    <fullName>INR</fullName>
                </value>
                <value>
                    <fullName>JPY</fullName>
                </value>
                <value>
                    <fullName>KRW</fullName>
                </value>
                <value>
                    <fullName>MXN</fullName>
                </value>
                <value>
                    <fullName>NZD</fullName>
                </value>
                <value>
                    <fullName>PLN</fullName>
                </value>
                <value>
                    <fullName>RUB</fullName>
                </value>
                <value>
                    <fullName>SEK</fullName>
                </value>
                <value>
                    <fullName>SGD</fullName>
                </value>
                <value>
                    <fullName>TRY</fullName>
                </value>
                <value>
                    <fullName>USD</fullName>
                </value>
                <value>
                    <fullName>ZAR</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DateCompare__c</fullName>
        <formula>End_Date__c &gt;= Start_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date Compare</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <label>Department</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EmailCodingKey__c</fullName>
        <label>Email EnCoding</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>UTF-8</fullName>
                </value>
                <value>
                    <fullName>ISO-8859-1</fullName>
                </value>
                <value>
                    <fullName>Shift_JIS</fullName>
                </value>
                <value>
                    <fullName>ISO-2022-JP</fullName>
                </value>
                <value>
                    <fullName>EUC-JP</fullName>
                </value>
                <value>
                    <fullName>ks_c_5601-1987</fullName>
                </value>
                <value>
                    <fullName>Big5</fullName>
                </value>
                <value>
                    <fullName>GB2312</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <caseSensitive>true</caseSensitive>
        <label>Email</label>
        <required>true</required>
        <type>Email</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Employee_Number__c</fullName>
        <externalId>true</externalId>
        <label>Employee Number</label>
        <length>10</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Exclude_User__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Exclude User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HR_Active__c</fullName>
        <description>Integration field</description>
        <label>HR Active</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HR_IsActive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>HR IsActive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsActive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsRehire__c</fullName>
        <description>Old field, please reference and use new field - Is_Rehire__c, added in case 355893 - Salesforce - Add Rehire and Worker Type from Workday into Salesforce</description>
        <formula>Is_Rehire__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>XX.Is Rehire (Deprecated)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Rehire__c</fullName>
        <defaultValue>false</defaultValue>
        <description>355893 - Salesforce - Add Rehire and Worker Type from Workday into Salesforce</description>
        <label>Is Rehire</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LanguageLocaleKey__c</fullName>
        <label>Language</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>en_US</fullName>
                </value>
                <value>
                    <fullName>de</fullName>
                </value>
                <value>
                    <fullName>es</fullName>
                </value>
                <value>
                    <fullName>fr</fullName>
                </value>
                <value>
                    <fullName>it</fullName>
                </value>
                <value>
                    <fullName>ja</fullName>
                </value>
                <value>
                    <fullName>sv</fullName>
                </value>
                <value>
                    <fullName>ko</fullName>
                </value>
                <value>
                    <fullName>zh_TW</fullName>
                </value>
                <value>
                    <fullName>zh_CN</fullName>
                </value>
                <value>
                    <fullName>pt_BR</fullName>
                </value>
                <value>
                    <fullName>nl_NL</fullName>
                </value>
                <value>
                    <fullName>th</fullName>
                </value>
                <value>
                    <fullName>fl</fullName>
                </value>
                <value>
                    <fullName>ru</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LocaleSidKey__c</fullName>
        <label>Locale</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ar</fullName>
                </value>
                <value>
                    <fullName>ca</fullName>
                </value>
                <value>
                    <fullName>ca_ES_EURO</fullName>
                </value>
                <value>
                    <fullName>ca_ES</fullName>
                </value>
                <value>
                    <fullName>zh</fullName>
                </value>
                <value>
                    <fullName>zh_CN</fullName>
                </value>
                <value>
                    <fullName>zh_HK</fullName>
                </value>
                <value>
                    <fullName>zh_TW</fullName>
                </value>
                <value>
                    <fullName>cs</fullName>
                </value>
                <value>
                    <fullName>cs_CZ</fullName>
                </value>
                <value>
                    <fullName>da_DK</fullName>
                </value>
                <value>
                    <fullName>nl</fullName>
                </value>
                <value>
                    <fullName>nl_BE</fullName>
                </value>
                <value>
                    <fullName>nl_NL</fullName>
                </value>
                <value>
                    <fullName>en_AU</fullName>
                </value>
                <value>
                    <fullName>en_CA</fullName>
                </value>
                <value>
                    <fullName>en_IE_EURO</fullName>
                </value>
                <value>
                    <fullName>en_IE</fullName>
                </value>
                <value>
                    <fullName>en_NZ</fullName>
                </value>
                <value>
                    <fullName>en_ZA</fullName>
                </value>
                <value>
                    <fullName>en_GB</fullName>
                </value>
                <value>
                    <fullName>en_US</fullName>
                </value>
                <value>
                    <fullName>fi</fullName>
                </value>
                <value>
                    <fullName>fi_FI_EURO</fullName>
                </value>
                <value>
                    <fullName>fi_FI</fullName>
                </value>
                <value>
                    <fullName>fr</fullName>
                </value>
                <value>
                    <fullName>fr_BE</fullName>
                </value>
                <value>
                    <fullName>fr_CA</fullName>
                </value>
                <value>
                    <fullName>fr_FR_EURO</fullName>
                </value>
                <value>
                    <fullName>fr_FR</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manager_Employee_Number__c</fullName>
        <label>Manager Employee Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MatrixManagerEmployeeNo__c</fullName>
        <label>Matrix Manager Employee No</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nickname__c</fullName>
        <label>Nickname</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Office_Address__c</fullName>
        <label>Office Address</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Office_City__c</fullName>
        <label>Office City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Office_Country__c</fullName>
        <label>Office Country</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Office_StateProvince__c</fullName>
        <label>Office State/Province</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Office_ZipPostalCode__c</fullName>
        <label>Office ZipPostalCode</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Profile__c</fullName>
        <label>Profile</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFUser_Isactive__c</fullName>
        <description>Used by Int Team reports to check if user is active in Salesforce</description>
        <formula>If((User__c != null &amp;&amp; User__r.IsActive = true),true,false)</formula>
        <inlineHelpText>For Integration use only do not edit</inlineHelpText>
        <label>SF User Isactive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>State_Province__c</fullName>
        <label>Home State/Province</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Termination_JOB_Date__c</fullName>
        <description>WD termination jobs stamps date when job processes this record</description>
        <inlineHelpText>For Integration use only do not edit</inlineHelpText>
        <label>Termination JOB Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TimeZoneSidKey__c</fullName>
        <label>Time Zone</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Africa/Cairo</fullName>
                </value>
                <value>
                    <fullName>Africa/Johannesburg</fullName>
                </value>
                <value>
                    <fullName>Africa/Nairobi</fullName>
                </value>
                <value>
                    <fullName>America/Anchorage</fullName>
                </value>
                <value>
                    <fullName>America/Bogota</fullName>
                </value>
                <value>
                    <fullName>America/Buenos_Aires</fullName>
                </value>
                <value>
                    <fullName>America/Caracas</fullName>
                </value>
                <value>
                    <fullName>America/Chicago</fullName>
                </value>
                <value>
                    <fullName>America/Denver</fullName>
                </value>
                <value>
                    <fullName>America/El_Salvador</fullName>
                </value>
                <value>
                    <fullName>America/Halifax</fullName>
                </value>
                <value>
                    <fullName>America/Indianapolis</fullName>
                </value>
                <value>
                    <fullName>America/Lima</fullName>
                </value>
                <value>
                    <fullName>America/Los_Angeles</fullName>
                </value>
                <value>
                    <fullName>America/Mexico_City</fullName>
                </value>
                <value>
                    <fullName>America/New_York</fullName>
                </value>
                <value>
                    <fullName>America/Panama</fullName>
                </value>
                <value>
                    <fullName>America/Phoenix</fullName>
                </value>
                <value>
                    <fullName>America/Puerto_Rico</fullName>
                </value>
                <value>
                    <fullName>America/Sao_Paulo</fullName>
                </value>
                <value>
                    <fullName>America/St_Johns</fullName>
                </value>
                <value>
                    <fullName>America/Tijuana</fullName>
                </value>
                <value>
                    <fullName>Asia/Baghdad</fullName>
                </value>
                <value>
                    <fullName>Asia/Bangkok</fullName>
                </value>
                <value>
                    <fullName>Asia/Calcutta</fullName>
                </value>
                <value>
                    <fullName>Asia/Colombo</fullName>
                </value>
                <value>
                    <fullName>Asia/Dacca</fullName>
                </value>
                <value>
                    <fullName>Asia/Dubai</fullName>
                </value>
                <value>
                    <fullName>Asia/Hong_Kong</fullName>
                </value>
                <value>
                    <fullName>Asia/Jakarta</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Title_Dept_Change__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Title/Dept Change</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Changed_Date__c</fullName>
        <description>Date when user details are updated</description>
        <label>User Changed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>User_Processed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>User Processed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>User_Record_Updated_Date__c</fullName>
        <description>Date when user record is updated after batch class ran</description>
        <label>User Record Updated Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>User_Suffix__c</fullName>
        <formula>IF(NOT(ISBLANK(Corporate_Role__c)),Corporate_Role__c,LEFT(Upper(Department__c), 3))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>User Suffix</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>FF_Staging_Users</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Username__c</fullName>
        <label>Username</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Workday_Region__c</fullName>
        <description>388138 - SF - Contact - Contact&apos;s region should be sourced from Workday</description>
        <label>Workday Region</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Worker_Type2__c</fullName>
        <description>355893 - Salesforce - Add Rehire and Worker Type from Workday into Salesforce</description>
        <label>Worker Type</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Worker_Type__c</fullName>
        <label>Worker SubType</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zip_Postal_Code__c</fullName>
        <label>Home Zip/Postal Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>FF Staging - User</label>
    <listViews>
        <fullName>Contact</fullName>
        <columns>NAME</columns>
        <columns>First_Name__c</columns>
        <columns>Last_Name__c</columns>
        <columns>Email__c</columns>
        <columns>End_Date__c</columns>
        <columns>HR_Active__c</columns>
        <columns>HR_IsActive__c</columns>
        <columns>Contact_Processed__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Contact_Changed_Date__c</columns>
        <columns>Contact_Record_Updated_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>End_Date__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>Contact</label>
        <language>en_US</language>
        <sharedTo>
            <group>System_Administrators</group>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>U-{000000000}</displayFormat>
        <label>FF Staging - User Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>FF Staging - Users</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Fail_termination_Info_Job</fullName>
        <active>true</active>
        <description>Block Termination job date when end date is missing</description>
        <errorConditionFormula>Ischanged(Termination_JOB_Date__c) &amp;&amp;
ISBLANK(End_Date__c)</errorConditionFormula>
        <errorMessage>Cannot process Termination date when End date is Missing.</errorMessage>
    </validationRules>
</CustomObject>